--- a/public/templates/dashboard/layout.html
+++ b/public/templates/dashboard/layout.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-3">
       <div class="row" ui-view="sales"> Sales View </div>
-      <div class="row" ui-view="suggestions"> Suggestions View </div>
+      <!-- <div class="row" ui-view="suggestions"> Suggestions View </div> -->
     </div>
 
   </div>
