--- a/public/templates/directives/availability_selector.html
+++ b/public/templates/directives/availability_selector.html
@@ -20,7 +20,7 @@
   <div class='row'>
 
     <!-- Start time -->
-    <div class='col-sm-6' style='border:1px solid #2f4154; padding:10px; border-radius:5px'>
+    <div class='col-md-8 col-md-offset-2' style='border:1px solid #2f4154; padding:10px; border-radius:5px'>
 
       <div  class="row text-center"
             ng-hide='start.hour && start.minute && start.am'>
@@ -61,7 +61,7 @@
     </div> <!-- end of Start time / col-sm-6 -->
 
     <!-- End time -->
-    <div class='col-sm-6' style='border:1px solid #1abc9c; padding:10px; border-radius:5px;'>
+    <div class='col-md-8 col-md-offset-2' style='border:1px solid #1abc9c; padding:10px; border-radius:5px;'>
 
       <div  class="row text-center"
             ng-hide='end.hour && end.minute && end.am'>
