removed unneeded files tour demo

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -24,7 +24,7 @@
       <div class="panel-title text-center"
           ng-hide='updateFieldForAbout'
           ng-click='updateFieldForAbout = !updateFieldForAbout'>
-          {{information.about || "Add a note"}}
+          {{information.about || "click to add a note"}}
       </div>
 
       <div class="panel-title text-center"
