--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -9,7 +9,7 @@
 
 
           <a href="../index.html" class="app-brand m-b-lg">
-            <img src="img/logo.png" alt="brand">
+            <img src="images/big-logo.png" alt="brand">
           </a>
           <hr>
           <!-- Email -->
