able to upload and edit photos from user settings  --skip-ci

--- a/public/templates/profiles/settings.html
+++ b/public/templates/profiles/settings.html
@@ -125,10 +125,11 @@
 
       </div>
 
+      <!-- Photo -->
       <div class="form-group">
         <label>Change photo
-          <input type="file" name="photo" class="form-control"
-                  ngf-select ng-model="userInfo.file_attachment">
+          <input  type="file" class="form-control"
+                  ngf-select ng-model="profileUpdate.photoFile">
         </label>
       </div>
 
