front end edits

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -14,7 +14,7 @@
     <section id="section-features" class="features">
       <div class="container">
         <header>
-          <h1>What's <span class="bangers">Codelegy?</span></h1>
+          <h1>What is <span class="bangers p-text">Codelegy?</span></h1>
           <p class="lead">Find others to code with</p>
         </header>
         <div class="row">
@@ -60,8 +60,8 @@
                   <div class="quote-icon"><img src="img/icons/dude.svg" alt="" title=""></div>
                 </div>
                 <div class="col-md-8">
-                  <p class="lead">Well... honestly it doesn"t get much better than this! These guys know what they"re doing!</p>
-                  <cite>John Doe, <a href="#">Freelance Journalist</a></cite>
+                  <p class="lead"> learning to code without pair programming is like trying to learn Spanish by talking to yourself!</p>
+                  <cite>Marcus Moore, <a href="https://marcusmooreweb.wordpress.com/">Web developer/designer</a></cite>
                 </div>
               </div>
               <!-- Testimonial 2-->
@@ -70,8 +70,8 @@
                   <div class="quote-icon"><img src="img/icons/girl.svg" alt="" title=""></div>
                 </div>
                 <div class="col-md-8">
-                  <p class="lead">If i had to do it again, i"d definitely go with the same team - that was an amazing experience.</p>
-                  <cite>Sarah Jackson, <a href="#">Startup Owner</a></cite>
+                  <p class="lead">I learned much faster with others, also picked up a ton of time saving techniques</p>
+                  <cite>Mike Butts, <a href="http://www.michaelbutts.me">Full-Stack Developer</a></cite>
                 </div>
               </div>
             </div>
@@ -85,7 +85,7 @@
     <section id="section-faq" class="faq">
       <div class="container">
         <header>
-          <h1>F.A.Q.</h1>
+          <h1 class="p-text bangers">F.A.Q.</h1>
           <p class="lead">You have a question? Someone else might have had the exact same one. Lets find out!</p>
         </header>
         <div class="row">
@@ -94,100 +94,62 @@
             <div id="accordion" class="panel-group">
               <!-- PANEL 1-->
               <div class="panel panel-success">
-                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="accordion-toggle">Is this template compatible with Bootstrap 3?</a></div>
+                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="accordion-toggle">Will you tech me code?</a></div>
                 <div id="collapseOne" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Absolutely! As shown with a few examples within this demo, you can use all the bootstrap goodies such as carousels, modal windows, tooltips, tabs, accordions, form elements...</p>
+                    <p>No, that's not what we are about, however, we will point you in the direction to head. And find other's at your skill level to learn with.</p>
                   </div>
                 </div>
               </div>
               <!-- PANEL 2-->
               <div class="panel panel-success">
-                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="accordion-toggle">Are there more icons available?</a></div>
+                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="accordion-toggle">How much will this cost me?</a></div>
                 <div id="collapseTwo" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Hell yeah! This template is built on the awesome <a href="http://designmodo.com/flat/" target="_blank">Flat UI Pro kit by Designmodo</a>.<br>All the icons &#38; goodies you can see on the kit presentation can be used in Booom!</p>
+                    <p>Nothing! The site will always be free to find people to code with!</p>
                   </div>
                 </div>
               </div>
               <!-- PANEL 3-->
               <div class="panel panel-success">
-                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="accordion-toggle">Can you resize the illustrations?</a></div>
+                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="accordion-toggle">What if the language I want isn't an option?</a></div>
                 <div id="collapseThree" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Those gorgeous illustrations are available in SVG format (vector), which means they"re completely scaleable without any quality loss.</p>
+                    <p>There are two solutions for this, first, you can post in a related language if avaliable. If you want to pair with others for ReactJs, then post in the JavaScript category. Second if you feel that something should be added shoot us an <a href="mailto:devteam@codelegy.xyz?Subject=Add%20Language" target="_top">email</a></p>
                   </div>
                 </div>
               </div>
               <!-- PANEL 4-->
               <div class="panel panel-success">
-                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="accordion-toggle">Does the template hack into Bootsrap core files?</a></div>
+                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="accordion-toggle">How do I report bugs or pitch new ideas?</a></div>
                 <div id="collapseFour" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Nooooo. Yeww, no way! The Bootsrap files are totally untouched - all the customizations are done on extra css (or LESS) files, so you can upgrade bootstrap versions wihout any modification losses.</p>
+                    <p>We are open to feedback, ideas, suggestions, volunteer work, just send a an <a href="mailto:devteam@codelegy.xyz?Subject=Add%20Language" target="_top">email</a> and we will get in touch</p>
                   </div>
                 </div>
               </div>
             </div>
             <!-- ////////// end of Accordion Toggle //////////-->
-            <div class="alert alert-info">
-              <p class="lead">Our Contact Details</p>
-              <div class="row">
-                <div class="col-md-4 col-xs-6 text-left"><strong>Address</strong></div>
-                <div class="col-md-8 col-xs-6">
-                  <address>144 Pitt Street, Byron Bay, Australia<br></address>
-                </div>
-              </div>
-              <!-- /row-->
-              <div class="row">
-                <div class="col-md-4 col-xs-6 text-left"><strong>Phone Number</strong></div>
-                <div class="col-md-8 col-xs-6">
-                  <address>+61 (0) 243 888 888<br></address>
-                </div>
-              </div>
-              <!-- /row-->
-              <div class="row">
-                <div class="col-md-4 col-xs-6 text-left"><strong>Mobile Number</strong></div>
-                <div class="col-md-8 col-xs-6">
-                  <address>+61 (0) 424 999 999<br></address>
-                </div>
-              </div>
-              <!-- /row-->
-            </div>
-            <!-- /alert-->
+
           </div>
           <!-- /col-md-6-->
           <div class="col-md-6">
-            <div class="row contact-intro">
-              <div class="col-md-3 text-right"><img src="img/icons/support.svg" alt="" title=""></div>
-              <div class="col-md-9">
-                <p class="lead">Didnt find what you were looking for? Shoot us a line!</p>
-              </div>
-            </div>
-            <!-- ////////// CONTACT FORM //////////-->
-            <form id="contact-form">
-              <input id="name" type="text" name="name" placeholder="Your name..." class="form-control input-hg">
-              <input id="email" type="text" name="email" placeholder="Your e-mail address..." class="form-control input-hg">
-              <textarea id="message" rows="4" name="message" placeholder="Your message..." class="form-control input-hg"></textarea>
-              <button type="submit" name="submit" class="btn btn-inverse btn-hg btn-block">Send</button>
-            </form>
-            <div id="contact-error"></div>
-            <!-- ////////// end CONTACT FORM ///////////-->
+              <img class="img-responsive"  src="img/31.jpg" alt="laptops" title="">          
           </div>
           <!-- /col-md-6-->
         </div>
       </div>
     </section>
     <!-- ///// TWITTER SECTION /////-->
-    <section id="twitter" class="twitter">
+<!--     <section id="twitter" class="twitter">
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center"><img src="img/icons/chat.svg" alt="" title="">
-            <p class="lead"><span id="tweets-feed" class="lead"></span></p>
+         
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ///// FOOTER SECTION /////-->
     <footer class="footer">
       <div class="bottom-menu-inverse">
@@ -199,8 +161,8 @@
             <div class="col-md-6 social">
               <ul class="bottom-menu-iconic-list pull-right">
                 <li><a href="#" class="fui-facebook"></a></li>
-                <li><a href="#" class="fui-twitter"></a></li>
-                <li><a href="#" class="fui-pinterest"></a></li>
+                <li><a href="https://twitter.com/CodelegyXYZ" class="fui-twitter"></a></li>
+                <!-- <li><a href="#" class="fui-pinterest"></a></li> -->
               </ul>
             </div>
           </div>
