--- a/public/templates/profiles/show.html
+++ b/public/templates/profiles/show.html
@@ -1,8 +1,10 @@
+<div class="wide-container">
 <div class="panel">
   <div class="panel-heading">
-    <h1>Profile</h1>
+    <h1 class="page-header bangers p-text">P.jb khvklkvhofile</h1>
     <img src="{{information.photo_id}}">
   </div>
+  {{information}}
   <div class="panel-body row">
     <div class="col-md-6">
       <div >
@@ -29,4 +31,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
