--- a/public/templates/projects/participation-request.html
+++ b/public/templates/projects/participation-request.html
@@ -1,7 +1,8 @@
-<main>
+<div class="wide-container">
   <br>
   <div class="container-content-middle">
-    <h3>Code with {{project.owner_username}}</h3>
+    <h3 class="page-header">Code with <span class="bangers p-text"
+    >{{project.owner_username}}</span></h3>
     <h4>{{project.title}}</h4>
 
     <textarea placeholder="Why do you want to work on this project?"
@@ -14,4 +15,4 @@
     </button>
 
   </div>
-</main>
+</div>
