remove unresponse link  --skip-ci

--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -8,7 +8,7 @@
               class="m-x-auto text-center app-login-form">
 
 
-          <a href="../index.html" class="app-brand m-b-lg">
+          <a href="" class="app-brand m-b-lg">
             <img src="images/big-logo.png" alt="brand">
           </a>
           <hr>
