--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -66,12 +66,12 @@
 
           </div>
 
-        </form>
 
-        <footer class="screen-login m-x-auto text-center app-login-form">
+        <div class=" text-center">
             <a href="#" class="text-muted"
                 data-toggle="modal" data-target="#resetPasswordModal">Forgot password</a>
-        </footer>
+        </div>
+        </form>
 
         <div id="resetPasswordModal" class="modal fade" role="dialog">
           <div class="modal-dialog">
