--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -3,15 +3,11 @@
 <!-- Profile info -->
 <div class="panel panel-default panel-profile m-b-md">
 
-  <div  class="panel-heading"
-        style="background-image: url(assets/iceland.jpg);">
-  </div>
-
   <div class="panel-body text-center">
 
     <a href="profile/index.html">
       <img class="panel-profile-img img-responsive"
-        src="{{information.photo_url || 'assets/avatar.png'}}">
+        src="{{information.photo_url || 'images/avatar.png'}}">
     </a>
 
     <h5 class="panel-title">
