--- a/public/templates/profiles/settings.html
+++ b/public/templates/profiles/settings.html
@@ -10,7 +10,7 @@
     <h5>Email: {{currentUser.user.email}}</h5>
     <a href="" ng-click="showEditForm=!showEditForm">Edit</a> <br>
     <a href="" ng-click="cancelAccount()">Delete Account</a> <br>
-    <img src="{{ photo_url || 'assets/avatar.png' }}" class='img-responsive'/>
+    <img src="{{ photo_url || 'images/avatar.png' }}" class='img-responsive'/>
   </div>
 
   <div class="col-sm-5">
