--- a/public/templates/dashboard/directives/programming-language-add.html
+++ b/public/templates/dashboard/directives/programming-language-add.html
@@ -1,61 +1,57 @@
 <hr>
 <div class='row'>
   <form>
-
-    <div class="dropdown col-sm-4">
-      <button class="btn btn-default dropdown-toggle"
-              type="button" id="dropdownMenu1"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="true">
-        <small>{{ languageSelected.name || 'Language' }}</small>
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li ng-repeat="language in languages"
-            ng-click="languageSelected.id=language.id; languageSelected.name=language.name;">
-          <span>{{language.name}}</span>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="dropdown col-sm-6 col-sm-offset-3">
+        <button class="btn btn-default dropdown-toggle"
+                type="button" id="dropdownMenu1"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="true">
+          <small>{{ languageSelected.name || 'Language' }}</small>
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li ng-repeat="language in languages"
+              ng-click="languageSelected.id=language.id; languageSelected.name=language.name;">
+            <span>{{language.name}}</span>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <div class="dropdown col-sm-4">
-      <button class="btn btn-default dropdown-toggle"
-              type="button" id="dropdownMenu1"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="true">
-        <small>{{ expLevel[updatedDifficulty[languageSelected.id]] || 'Experience' }}</small>
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li ng-click="levelSelectedId='None'">None</li>
-        <li ng-repeat="(levelId, level) in expLevel" ng-click="changeDifficulty(languageSelected.id, level, levelId)">
-          <span>{{level}}</span>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="dropdown col-sm-6 col-sm-offset-3">
+        <button class="btn btn-default dropdown-toggle"
+                type="button" id="dropdownMenu1"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="true">
+          <small>{{ expLevel[updatedDifficulty[languageSelected.id]] || 'Experience' }}</small>
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li ng-click="levelSelectedId='None'">None</li>
+          <li ng-repeat="(levelId, level) in expLevel" ng-click="changeDifficulty(languageSelected.id, level, levelId)">
+            <span>{{level}}</span>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <div class='col-sm-2 col-sm-offset-1'>
-      <div class='row'>
-        <div class='col-sm-8'>
-          <span class="glyphicon glyphicon-ok"
-              aria-hidden="true"
-              ng-click='update(); addLanguage.userInput=false;'>
-          </span>
-        </div>
+    <div class='row' style="margin-top: 10px;">
+  
+      <div class="col-sm-2 col-sm-offset-4">
+        <big><span class="glyphicon glyphicon-ok" 
+            aria-hidden="true"
+            ng-click='update(); addLanguage.userInput=false;'>
+        </span></big>
+      </div>
+      <div class="col-sm-3">    
+        <big><span class="glyphicon glyphicon-remove"
+            aria-hidden="true"
+            ng-click='addLanguage.userInput=false'>
+        </span></big>
       </div>
 
-      <div class='row'>
-        <div class='col-sm-10 col-sm-offset-6'>
-          <small>
-            <span class="glyphicon glyphicon-remove"
-                aria-hidden="true"
-                ng-click='addLanguage.userInput=false'>
-            </span>
-          </small>
-        </div>
-      </div>
     </div>
 
   </form>
