--- a/public/templates/registration/form.html
+++ b/public/templates/registration/form.html
@@ -4,7 +4,7 @@
     <div id="form-container">
 
         <div class="page-header text-center">
-            <h2>Let's <span class="megrim">Code</span> together</h2>
+            <h2>Let's <span class="bangers">Code</span> together</h2>
 
             <!-- the links to our nested states using relative paths -->
             <!-- add the active class if the state matches our ui-sref -->
