spellcheck  --skip-ci

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -39,9 +39,9 @@
         </div>
       </div>
     </section>
-  
 
-   
+
+
     <!-- ///// TESTIMONIALS SECTION /////-->
     <section id="section-testimonials" class="testimonials">
       <div class="container">
@@ -60,7 +60,7 @@
                   <div class="quote-icon"><img src="img/icons/dude.svg" alt="" title=""></div>
                 </div>
                 <div class="col-md-8">
-                  <p class="lead"> learning to code without pair programming is like trying to learn Spanish by talking to yourself!</p>
+                  <p class="lead"> Learning to code without pair programming is like trying to learn Spanish by talking to yourself!</p>
                   <cite>Marcus Moore, <a href="https://marcusmooreweb.wordpress.com/">Web developer/designer</a></cite>
                 </div>
               </div>
@@ -97,7 +97,7 @@
                 <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="accordion-toggle">Will you tech me code?</a></div>
                 <div id="collapseOne" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>No, that's not what we are about, however, we will point you in the direction to head. And find other's at your skill level to learn with.</p>
+                    <p>No, that's not what we are about, however, we will point you in the direction to head. And find others at your skill level to learn with.</p>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
           </div>
           <!-- /col-md-6-->
           <div class="col-md-6">
-              <img class="img-responsive"  src="img/31.jpg" alt="laptops" title="">          
+              <img class="img-responsive"  src="img/31.jpg" alt="laptops" title="">
           </div>
           <!-- /col-md-6-->
         </div>
@@ -145,7 +145,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center"><img src="img/icons/chat.svg" alt="" title="">
-         
+
           </div>
         </div>
       </div>
