--- a/public/templates/dashboard/projects.html
+++ b/public/templates/dashboard/projects.html
@@ -1,4 +1,7 @@
-<div ng-if="list.projectList.projects.length">
+<div ng-if="!list.projectList.projects.length" class='text-center'>
+  <br>
+  <br>
+  <br>
   <p>Looks like you haven't joined any projects yet!</p>
   <p>Go to the
     <a ui-sref="projects">Projects</a>
