completed current tour

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -5,7 +5,7 @@
 
   <div class="panel-body text-center">
 
-    <a href="profile/index.html">
+    <a ui-sref="profiles.settings">
       <img class="panel-profile-img img-responsive"
         src="{{information.photo_url || 'images/avatar.png'}}">
     </a>
