--- a/public/templates/registration/tour.html
+++ b/public/templates/registration/tour.html
@@ -1,73 +1,102 @@
-<h1 class="bangers p-text page-header">Tour</h1>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <button class="btn btn-info" ng-click="myExp='one'">One</button>
-          <button class="btn btn-info" ng-click="myExp='two'">Two</button>
-          <button class="btn btn-info" ng-click="myExp='three'">Three</button>
-        </div>
-        <div class="panel-body" ng-switch="myExp" >
+<div class="wide-container">
+  <h1 class="bangers p-text page-header">Tour</h1>
+  <div >
 
-            <div ng-switch-when="one" class="my-switch-animation">
-                        <table style="height: 170px;">
+    <div class="row">
+      <button class="btn btn-primary" ng-click="myExp='one'">Signing Up</button>
+      <button class="btn btn-primary" ng-click="myExp='two'">Find/Join a Project</button>
+      <button class="btn btn-primary" ng-click="myExp='three'">Edit Settings </button>
+      <button class="btn btn-primary" ng-click="myExp='four'">Edit Profile </button>
+      <button class="btn btn-primary" ng-click="myExp='five'">Edit Project</button>
+    </div>
+    <br>
+    <div  ng-switch="myExp" >
+
+      <div ng-switch-when="one" class="my-switch-animation">
+        <table style="height: 170px;">
           <tr><td style="width: 170px;">
-             <img src="/img/angular-logo-big.png" alt="AngularJS Logo" style="width: 150px; height: 150px;" />
-            </td>
-            <td style="width: 470px;">
-              <h2>The AngularJS Elevator Pitch</h2>
-              <blockquote>
-                 <p style="font-size: 13px">"AngularJS is a new, powerful, client-side technology that provides a way of 
-                 accomplishing really powerful things in a way that embraces and extends HTML, 
-                 CSS and JavaScript, while shoring up some of its glaring deficiencies. It is 
-                 what HTML would have been, had it been built for dynamic content."</p>
-                <small><cite title="Net Tuts+"><a href="http://net.tutsplus.com/tutorials/javascript-ajax/5-awesome-angularjs-features/">Net Tuts+</a></cite></small>
-            </blockquote>
-             </td>
-             </tr>
-             </table>
+           <img src="/images/signup.gif" alt="signing up" style="width: 606px; height: 354px;" />
+         </td>
+         <td style="width: 470px;">
+          <h2 class="bangers p-text">Signing Up</h2>
+          <blockquote>
+           <p style="font-size: 13px">Signing up is easy, click on sign up on the header, then either fill out your information or sign up with github!.</p>
 
-            </div>
-            <div ng-switch-when="two" class="my-switch-animation">
-                           <table style="height: 170px;">
-          <tr><td style="width: 170px;">
-             <img src="/img/angularjs-pitfalls.png" alt="AngularJS Pitfalls" style="width: 150px; height: 150px;" />
-            </td>
-            <td style="width: 470px;">
-              <h2>Model View ViewModel</h2>
-              <blockquote>
-                 <p style="font-size: 13px">
-                AngularJS incorporates the basic principles behind the original MVC software 
-                design pattern into how it builds client-side web applications. AngularJS 
-                does not implement MVC in the traditional sense, but rather something closer 
-                to MVVM (Model-View-ViewModel).</p>
-                <small><cite title="AngularJS"><a href="http://zachariahmoreno.com/portfolio/Angular-Slides/#/step-10">
-                  Zach Moreno</a></cite></small>
-            </blockquote>
-                
-             </td>
-             </tr>
-             </table>
+         </blockquote>
+       </td>
+     </tr>
+   </table>
 
-            </div>
-            <div ng-switch-when="three" class="my-switch-animation">
-                         <table style="height: 170px;">
-          <tr><td style="width: 170px;">
-             <img src="/img/angular-ebook.png" alt="AngularJS Pitfalls" style="width: 150px; height: 150px;" />
-            </td>
-            <td style="width: 470px;">
-              <h2>AngularJS Ebook</h2>
-              <blockquote>
-                 <p style="font-size: 13px">"Develop smaller, lighter web apps that are simple to create and easy to
-                  test, extend, and maintain as they grow. This hands-on guide introduces you to AngularJS, 
-                  the open source JavaScript framework that uses MVC architecture, 
-                  data binding, client-side templates, and dependency injection ..."</p>
-                <small><cite title="AngularJS"><a href="http://www.amazon.com/AngularJS-ebook/dp/B00C9MYA7G">
-                  AngularJS Ebook</a></cite></small>
-            </blockquote>
-             </td>
-             </tr>
-             </table>
+ </div>
+ <div ng-switch-when="two" class="my-switch-animation">
+   <table style="height: 170px;">
+    <tr><td style="width: 170px;">
+     <img src="/images/joinproject.gif" alt="joining a project" style="width: 606px; height: 354px;" />
+   </td>
+   <td style="width: 470px;">
+    <h2 class="p-text bangers">Joining A Project</h2>
+    <blockquote>
+     <p style="font-size: 13px">
+       To find a project, go to the projects page, adjust the filters for the language you want, the appropriate difficulty and availability and click "Code Together". You will then be prompted to send a message to the project's owner. That owner will get a notification, and can add you to the project (or let you know if it is full).
+     </p>
 
-            </div>
-          </div>
+   </blockquote>
 
-      </div>
+ </td>
+</tr>
+</table>
+</div>
+
+<div ng-switch-when="three" class="my-switch-animation">
+ <table style="height: 170px;">
+  <tr><td style="width: 170px;">
+   <img src="/images/edituser.gif" alt="editing user settings" style="width: 606px; height: 354px;" />
+ </td>
+ <td style="width: 470px;">
+ <h2 class="p-text bangers">Editing User Settings</h2>
+  <blockquote>
+   <p style="font-size: 13px">To edit your user settings, click on the user icon on the navigation bar. Once loaded you will find an edit button to change your password or your photo.</p>
+    </blockquote>
+  </td>
+</tr>
+</table>
+
+</div>
+
+<div ng-switch-when="four" class="my-switch-animation">
+ <table style="height: 170px;">
+  <tr><td style="width: 170px;">
+   <img src="/images/editprofile.gif" alt="editing profile" style="width: 606px; height: 354px;" />
+ </td>
+ <td style="width: 470px;">
+  <h2 class="p-text bangers">Editing Your Profile</h2>
+  <blockquote>
+   <p style="font-size: 13px">
+     To edit your profile, go to your dashboard, and click the Add link next to the corresponding section. To change your status click on the text under your avatar. 
+   </p>
+
+    </blockquote>
+  </td>
+</tr>
+</table>
+
+</div>
+<div ng-switch-when="five" class="my-switch-animation">
+ <table style="height: 170px;">
+  <tr><td style="width: 170px;">
+   <img src="/images/editproject.gif" alt="editing project" style="width: 606px; height: 354px;" />
+ </td>
+ <td style="width: 470px;">
+  <h2 class="p-text bangers">Editing Your Projects</h2>
+  <blockquote>
+   <p style="font-size: 13px">To edit projects you are the owner of go to your dashboard, under a project you own, click on the details link. Make the changes you want and save, then close. All set!</p>
+    
+    </blockquote>
+  </td>
+</tr>
+</table>
+
+</div>
+
+</div>
+</div>
