modal not scrolling  --skip-ci

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -177,8 +177,8 @@
       </div> <!-- end modal body-->
        <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <span ng-click ="cancel()" class="pull-right btn btn-danger">Cancel</span>
-        <span ng-click ="submit()" class="pull-right btn btn-success">Save</span>
+        <span ng-click ="cancel()" data-dismiss="modal" class="pull-right btn btn-danger">Cancel</span>
+        <span ng-click ="submit()" data-dismiss="modal" class="pull-right btn btn-success">Save</span>
       </div>
     </div>
   </div>
