ng-src  --skip-ci

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -7,7 +7,7 @@
 
     <a ui-sref="profiles.settings">
       <img class="panel-profile-img img-responsive"
-        src="{{information.photo_url || 'images/avatar.png'}}">
+        ng-src="{{information.photo_url || 'images/avatar.png'}}">
     </a>
 
     <h5 class="panel-title">
