spell check  --skip-ci

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -92,7 +92,7 @@
             <div id="accordion" class="panel-group">
               <!-- PANEL 1-->
               <div class="panel panel-success">
-                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="accordion-toggle">Will you tech me code?</a></div>
+                <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="accordion-toggle">Will you teach me code?</a></div>
                 <div id="collapseOne" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>No, that's not what we are about, however, we will point you in the direction to head. And find others at your skill level to learn with.</p>
@@ -113,7 +113,7 @@
                 <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="accordion-toggle">What if the language I want isn't an option?</a></div>
                 <div id="collapseThree" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>There are two solutions for this, first, you can post in a related language if avaliable. If you want to pair with others for ReactJs, then post in the JavaScript category. Second if you feel that something should be added shoot us an <a href="mailto:devteam@codelegy.xyz?Subject=Add%20Language" target="_top">email</a></p>
+                    <p>There are two solutions for this, first, you can post in a related language if available. If you want to pair with others for ReactJS, then post in the JavaScript category. Second if you feel that something should be added shoot us an <a href="mailto:devteam@codelegy.xyz?Subject=Add%20Language" target="_top">email</a></p>
                   </div>
                 </div>
               </div>
