commented out diff and times filter  --skip-ci

--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-7 col-md-offset-3">
+<!--   <div class="col-md-7 col-md-offset-3">
     Times: <input type="text" ng-model="filter.availability">
     Difficulty: <select ng-model="filter.difficulty_name">
 
@@ -44,7 +44,7 @@
     <option value="Intermediate">Intermediate</option>
     <option value="Expert">Expert</option>
     <option value="Master">Master</option>
-  </select>
+  </select> -->
 
   <button ui-sref="projects.new" ng-show="authenticated.status"
   class="btn btn-sm btn-info pull-right">New Project</button>
